next-app/src/components/Card/Card.module.scss
@import "@styles/variables.scss";

.container {
  position: relative;
  width: 100%;
  padding-bottom: 55%;
  border-radius: 24px;
  background-size: cover;
  background-repeat: no-repeat;

  .content {
    width: calc(100% - 48px);
    position: absolute;
    bottom: 24px;
    left: 24px;
    display: grid;
    grid-template-columns: 1fr auto;
    gap: 16px;

    .textContainer {
      width: 100%;
      display: flex;
      flex-direction: column;
      gap: 16px;

      .tags {
        list-style: none;
        display: flex;
        align-items: center;
        gap: 8px;

        .tag {
          padding: 4px 8px;
          background-color: $grey-dark;
          border-radius: 32px;
          color: $grey;
          text-align: center;
        }
      }
    }

    .arrow {
      margin-top: auto;
      display: flex;
      align-items: center;
      justify-content: center;
      width: 32px;
      height: 32px;
      border-radius: 32px;
      background-color: $light;
    }
  }

  .imageContainer {
    position: relative;
    display: none;
  }

  .arrow {
    display: none;
    align-items: center;
    justify-content: center;
    width: 32px;
    min-height: 32px;
    border-radius: 32px;
    background-color: $light;
  }
}

.container.main {
  height: 100%;
  display: flex;
  flex-direction: column;
  gap: 24px;
  padding: 24px;

  .content {
    position: relative;
    width: 100%;
    left: auto;
    bottom: auto;

    .textContainer {
      text-align: center;
      align-items: center;

      h3 {
        color: $primary;
      }
    }

    .arrow {
      display: none;
    }
  }

  .imageContainer {
    display: block;
    width: 100%;
    height: 100%;
  }

  .arrow {
    display: flex;
    margin-left: auto;
  }
}

@media screen and (min-width: $tablet) {
  .container.main {
    gap: 24px;
  }
}

